# Taillight_Recognition_with_VGG16-WaveNet

./: .clang-tidy  .gitignore  .gitmodules  20190814_map.fig  20200309_map.fig  20200312_map.fig  20200313_map.fig  Ini.m  README.md  XBW_CAN_itri_version.dbc  bus_roadtest_v3.slx  bus_roadtest_v3_initial.m  catkin_lidar.sh
src/car_model/: CMakeLists.txt  package.xml
src/car_model/cmake/: CarModel.cmake  CarModel.cmake.in  OpenCVVars.cmake.in  OptionsB1.cmake  OptionsHINO.cmake  OptionsOMNIBUS.cmake
src/car_model/include/: car_model.h.in
src/car_model/launch/: gen_drivenet_engine.launch
src/car_model/scripts/: analyze_rosbag.py  calc_bw.py  calc_hz.py  car_model.py.in  car_model.sh.in  check_ros_master.py  disengate_events_in_bags.py  extract_edge_detection_input.sh  extract_lidar_raw.sh  extract_lidar_raw_compressed.sh  extract_lidarxyz2lla_input.sh  extract_localization_raw.sh  extract_occ_grid_fusion_input.sh  extract_pedcross_input.sh  extract_rad_grab_input.sh  extract_raw.sh  extract_target_planner_input.sh  extract_track2d_input.sh  extract_ukf_mm_input.sh  gen_drivenet_engine.py  list_ifaces.py  maximize_window.py  move_window.py  publish_empty_msg.py  publish_image.py  raise_window.py  save_as_video_node.py  wait_node.py  wait_topic.py
src/car_model/south_bridge/: car_model_helper.py  car_model_helper_test.py  readme.md  run_unittest.sh  sb.ini  sb_b1.ini  sb_c1.ini  sb_rosbag_sender.py  sb_rosbag_sender_test.py  sb_set_ros_param.py
src/car_model/test/: CMakeLists.txt  car_model_test.cpp  env_checker.cpp  init_test_env.sh  publish_test.sh
src/car_model/test_car_b1/: CMakeLists.txt  b1_drivenet_hz.test  drivenet_120_1.test  drivenet_120_1_hz.sh  drivenet_120_1_hz.test  drivenet_120_2.test  drivenet_120_2_hz.sh  drivenet_120_2_hz.test  drivenet_60.test  drivenet_60_hz.sh  drivenet_60_hz.test  drivenet_create_engine.sh  drivenet_hz.sh  drivenet_hz.test  drivenet_publish_detect_image.sh  drivenet_publish_detect_image.test
src/car_model/test_car_b1_v2/: CMakeLists.txt  drivenet_b1_v2_hz.sh  drivenet_b1_v2_hz.test  drivenet_b1_v2_node_a_hz.sh  drivenet_b1_v2_node_a_hz.test  drivenet_b1_v2_node_b_hz.sh  drivenet_b1_v2_node_b_hz.test  drivenet_b1_v2_node_c_hz.sh  drivenet_b1_v2_node_c_hz.test  drivenet_b1_v2_node_hz.test  drivenet_create_engine.sh  drivenet_output_as_video.sh  drivenet_output_as_video.test  drivenet_publish_detect_image.sh  drivenet_publish_detect_image.test  init_test_env.sh  publish_test.sh  publish_test_asan.sh  publish_test_convex_fusion_b1_v2.test  publish_test_drivenet_b1_v2.test  publish_test_drivenet_b1_v2_sidecam_3dobj.test  publish_test_edge_detection_b1_v2.test  publish_test_fail_safe_b1_v2.test  publish_test_geofence_b1_v2.test  publish_test_geofence_pp_b1_v2.test  publish_test_image_compressor_b1_v2.test  publish_test_lidarnet_b1_v2.test  publish_test_lidarnet_b1_v2_raw_compressed.test  publish_test_lidarxyz2lla_b1_v2.test  publish_test_localization_b1_v2.test  publish_test_mr.sh  publish_test_pedcross_b1_v2.test  publish_test_rad_grab_b1_v2.test  publish_test_tpp_b1_v2.test  publish_test_track2d_b1_v2.test  publish_test_tsan.sh  publish_test_ubsan.sh  publish_test_ukf_mm_b1_v2.test
src/car_model/test_car_b1_v3/: CMakeLists.txt  drivenet_b1_v3_hz.sh  drivenet_b1_v3_hz.test  drivenet_b1_v3_node_hz.test  drivenet_output_as_video.test  go.sh  init_test_env.sh  lidarnet_b1_v3_hz.sh  lidarnet_b1_v3_hz.test  pedcross_asan.sh  publish_test.sh  publish_test_alignment_b1_v3.test  publish_test_asan.sh  publish_test_drivenet_b1_v3.test  publish_test_edge_detection_b1_v3.test  publish_test_edge_detection_xyzir_b1_v3.test  publish_test_geofence_pp_b1_v3.test  publish_test_image_flip.test  publish_test_lidar_point_pillars_integrator_b1_v3.test  publish_test_lidarnet_b1_v3.test  publish_test_lidarnet_b1_v3_raw_compressed.test  publish_test_lidars_grabber_b1_v3.test  publish_test_localization_b1_v3.test  publish_test_pedcross_b1_v3.test  publish_test_pedcross_b1_v3_asan.test  publish_test_target_planner_b1_v3.test  publish_test_tsan.sh  publish_test_ubsan.sh
src/control/Geofence_PP/: CMakeLists.txt  package.xml
src/control/control_checker/: CMakeLists.txt  README.md  package.xml
src/control/dspace_subscriber/: CMakeLists.txt  package.xml
src/control/from_dspace/: CMakeLists.txt  README.md  package.xml
src/control/geofence/: CMakeLists.txt  README.md  package.xml
src/control/geofence_map_pp/: CMakeLists.txt  README.md  package.xml
src/control/geofence_map_pp_filter/: CMakeLists.txt  package.xml
src/control/geofence_pp/: CMakeLists.txt  README.md  package.xml
src/control/gnss_utility/: CMakeLists.txt  README.md  package.xml
src/control/lidar_location_send/: CMakeLists.txt  package.xml
src/control/rad_grab/: CMakeLists.txt  README.md  package.xml
src/control/to_dspace/: CMakeLists.txt  README.md  package.xml
src/control/trimble_grabber/: CMakeLists.txt  package.xml
src/control/vehinfo_pub/: CMakeLists.txt  package.xml
src/detection_viz/: CMakeLists.txt  package.xml
src/detection_viz/launch/: fusion_viz.launch  itriadv_viz.launch  markers.launch  parknet_viz.launch  rviz.launch
src/detection_viz/rviz/: HINO.rviz  HINO_all.rviz  HINO_fusion.rviz  HINO_parknet.rviz  U3_b1.rviz  U3_b2.rviz  U3_b3.rviz  U3_b4.rviz  U3_b5.rviz  U3_b5_lanelet2.rviz  U3_b5_lanelet2_map_pp.rviz  U3_b5_lanelet2_old_pp.rviz  U3_b5_lanelet2_pedcross.rviz  U3_b5_lanelet2_pedcross_ashain.rviz  U3_b6_for_demo.rviz  tracking.rviz  ver_tmp.rviz  ver_tmp_2.rviz  ver_tmp_3.rviz  ver_tmp_costmap.rviz
src/detection_viz/scripts/: bus_footprint.py  costmap_listener_ITRI.py  fps_calculator.py  gen_lane_event_grid.py  gen_pp_ellipse.py  marker_gen_detection.py  marker_gen_detection_fake.py  marker_lane_curve.py  marker_parking_slot.py  marker_polygon_gen_tpp.py  marker_traffic_sign.py  marker_traffic_signal.py  polygon_gen_detection.py  polygon_gen_detection_fake.py  signal_analizer.py  signal_analyzer.py  text_marker_gen.py  txt_current_pose.py  txt_occupancy_grid_map.py
src/dl_data/: CMakeLists.txt  package.xml
src/dl_data/cmake/: camera_distance.cmake  (+17 more)
(+3374 files in other folders)
