<?xml version="1.0"?>
<package>
  <name>geofence_map_pp_filter</name>
  <version>0.0.0</version>
  <description>The geofence_map_pp_filter package</description>

  <maintainer email="henryc1126@itri.org.tw">Henry Chang</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>autoware_perception_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>autoware_perception_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

</package>
